--- a/pyvenv.cfg
+++ b/pyvenv.cfg
@@ -2,4 +2,4 @@ home = C:\Users\Cliente\AppData\Local\Programs\Python\Python312
 include-system-site-packages = false
 version = 3.12.4
 executable = C:\Users\Cliente\AppData\Local\Programs\Python\Python312\python.exe
-command = C:\Users\Cliente\AppData\Local\Programs\Python\Python312\python.exe -m venv C:\Users\Cliente\Desktop\Projeto\venv
+command = C:\Users\Cliente\AppData\Local\Programs\Python\Python312\python.exe -m venv C:\Users\Cliente\Desktop\Projeto Produtos\venv
